# cudnnTest

./: CMakeLists.txt
src/: common.h
src/reduce/: reduce.h  reduce4D.cu  reduce5D.cu
test/: reduce4DTest.cpp  reduce5DTest.cpp
